# ollama_ai

./: README.md
gemma-gradio-chatbot/: README.md  main.py  pyproject.toml
gemma-gradio-chatbot/data/: disease_limits.json
gemma-gradio-chatbot/tests/: Dockerfile  requirements.txt
