[project]
name = "gemma-gradio-chatbot"
version = "0.1.0"
description = ""
authors = [
    {name = "yeryung", email = "202303865@hufs.ac.kr"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["langchain (>=0.3.25,<0.4.0)", "langchain-community (>=0.3.24,<0.4.0)"]

[tool.poetry]
packages = [{include = "gemma_gradio_chatbot", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
